Fix margins on iOS + increase logo

--- a/web/less/style.less
+++ b/web/less/style.less
@@ -143,7 +143,7 @@ a:hover {
 @media (max-width: 480px) {
 	
 	#logo {
- 		width: 180px;
+ 		width: 200px;
  		margin: 4px 0 2px 0;
  		padding: 0 0 0 0px;
  	}
@@ -160,7 +160,7 @@ a:hover {
 	
 	#welcome,
 	#main {
-		margin: -20px 0;
+		margin-top: -20px;
 	}
 	
 }
